# mote

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bundle-macos.sh
.kiro/specs/: _master-plan.md
.kiro/specs/01-scaffold/: design.md  requirements.md  tasks.md
.kiro/specs/02-storage-layer/: requirements.md
.kiro/specs/03-documents/: requirements.md
.kiro/specs/04-tasks/: requirements.md
.kiro/specs/05-github-sync/: requirements.md
assets/cm-build/: entry.js  package-lock.json  package.json
src/: main.rs
src/models/: mod.rs
src/storage/: backup.rs  db.rs  files.rs  mod.rs
src/ui/: app.rs  browser.rs  editor.rs  editor_init.js  file_explorer.rs  markdown.rs  mod.rs  monaco_init.js  settings.rs  sidebar.rs  styles.css  task_view.rs
tasks/: todo-deploy-mote-2026-03-21T12-32-48.md
