[package]
name = "mote"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
rusqlite = { version = "0.34", features = ["bundled", "bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
pulldown-cmark = "0.12"
ammonia = "4"
zip = { version = "2", default-features = false, features = ["deflate"] }
